add support for top metrics and stats